Fix project logos alignment; Remove svg compression

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -227,6 +227,7 @@ section.my-achievements .card {
 
 .project__logo {
 	display: flex;
+	justify-content: center;
 }
 
 .project__logo img {
